# calz

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: accuracy.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: INTRO.md
docs/CALENDARS/: gregorian.md
examples/: basic.rs
src/: lib.rs
src/calendars/: coptic.rs  gregorian.rs  islamic.rs  mod.rs
src/core/: context.rs  epoch.rs  error.rs  mod.rs  traits.rs
src/util/: math.rs
