[package]
name = "calz"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Calendar converter"
authors = ["Youssef Adly <youssefadly237@gmail.com>"]
repository = "https://github.com/youssefadly237/calz"
readme = "README.md"

[dependencies]
thiserror = "2"

[features]
default = ["std"]
std = []
astro = []
tables = []

[dev-dependencies]
proptest = "1"
criterion = "0.7"

[[example]]
name = "basic"
path = "examples/basic.rs"

