[package]
name = "calz"
version = "0.0.2"
edition = "2024"
description = "A Rust library for multi-calendar conversion."
authors = ["Youssef Adly <youssefadly237@gmail.com>"]
repository = "https://github.com/youssefadly237/calz"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
thiserror = "2"

[features]
default = ["std"]
std = []
astro = []
tables = []

[dev-dependencies]
proptest = "1"
criterion = "0.7"

[[example]]
name = "basic"
path = "examples/basic.rs"

